--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/logginn.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/logginn.html
@@ -41,8 +41,8 @@
 
       <!-- kode for  ønskeliste knappen er under her  -->
       <section class="lenke">
-        <a href="ønskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-        <a href="ønskeliste.html">ØNSKELISTE</a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
       <!-- kode for Handlekurv knappen er under her  -->
       <section class="lenke">
@@ -65,7 +65,7 @@
 
       <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
-        <a href="klær.html" class="dropknapp">Klær</a>
+        <a href="klar.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
           <a href="gensere.html">gensere</a>
           <a href="bukser.html">Bukser</a>
@@ -155,7 +155,7 @@
 
 
       <section class="reklame2">
-        <a href="klær.html"><img src="bilder_klar_riktig/reklame_2bild.jpg" alt="bilde"></a>
+        <a href="klar.html"><img src="bilder_klar_riktig/reklame_2bild.jpg" alt="bilde"></a>
       </section>
       <footer>
       </footer>
@@ -178,7 +178,7 @@
                   <td><a href="logginn.html"> LOGG INN</a></td>
                 </tr>
                 <tr>
-                  <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                  <td><a href="onskeliste.html">ØNSKELISTE</a></td>
                 </tr>
                 <tr>
                   <td><a href="kundeservice.html">KONTAKT OSS</a></td>
@@ -200,7 +200,7 @@
               </thead>
               <tbody>
                 <tr>
-                  <td> <a href="klær.html">klær</a>
+                  <td> <a href="klar.html">klær</a>
                   </td>
                 </tr>
                 <tr>
