--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/sko.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/sko.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>SISAKA-SKO</title>
-  <link rel="stylesheet" href="klær.css">
+  <link rel="stylesheet" href="klar.css">
   <script src="Javascript/main.js">
 
   </script>
@@ -55,8 +55,8 @@
 
       <!-- kode for  ønskeliste knappen er under her  -->
       <section class="lenke">
-        <a href="ønskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-        <a href="ønskeliste.html">ØNSKELISTE</a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
       <!-- kode for Handlekurv knappen er under her  -->
       <section class="lenke">
@@ -79,7 +79,7 @@
 
       <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
-        <a href="klær.html" class="dropknapp">Klær</a>
+        <a href="klar.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
           <a href="gensere.html">gensere</a>
           <a href="bukser.html">Bukser</a>
@@ -224,7 +224,7 @@
 
   <!-- kode for reklamen-->
   <section class="reklame2">
-    <a href="klær.html"><img src="bilder_klar_riktig/reklame_2bild.jpg" alt="bilde"></a>
+    <a href="klar.html"><img src="bilder_klar_riktig/reklame_2bild.jpg" alt="bilde"></a>
   </section>
 
   <!-- kode for innholdet i footer -->
@@ -245,7 +245,7 @@
               <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="onskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td><a href="kundeservice.html">KONTAKT OSS</a></td>
@@ -267,7 +267,7 @@
           </thead>
           <tbody>
             <tr>
-              <td> <a href="klær.html">klær</a>
+              <td> <a href="klar.html">klær</a>
               </td>
             </tr>
             <tr>
