--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Dame.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Dame.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
     </section>
 
 
@@ -56,9 +56,9 @@
 
     <section class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
-      <a href="ønskeliste.html">LISTE</a>
+      <a href="onskeliste.html">LISTE</a>
 
     </section>
 
@@ -263,7 +263,7 @@
               <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="onskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
