--- a/KaranSinMorsommeFerie/portefolje/index.html
+++ b/KaranSinMorsommeFerie/portefolje/index.html
@@ -32,7 +32,7 @@
     <section class="lenke ">
       <a href="facebook.html" class="fa fa-facebook"></a>
     </section>
-    
+
 
     <!-- kode for  ønskeliste og knappene er under her  -->
     <section class="lenke">
@@ -81,27 +81,6 @@
 
     <main>
 
-      <section class="side_main">
-        <section class="tabell_full">
-
-          <ul class="tabell_halv">
-            <li>
-              <section class="klær_tekst"><a href="index.html">MINE SIDER:</a>
-              </section>
-            </li>
-            <li><a href="A Hoved Database/index.html" class="tabell_ord">DATABASE SIDE</a></li>
-            <li><a href="Klesnettside prosjekt/index.html" class="tabell_ord">KLESNETTSIDE</a></li>
-            <li><a href="internett_historie/internett.html" class="tabell_ord">INTERNETTETS HISTORIE</a></li>
-            <li><a href="nettsted nettsikkerhet/index.html" class="tabell_ord">NETT SIKKERHET</a></li>
-            <li><a href="signaler i datautstyr/index.html" class="tabell_ord">Signaler i datautstyr</a></li>
-
-
-          </ul>
-        </section>
-
-
-      </section>
-
 
 
     <section class="main_hoved">
@@ -112,7 +91,7 @@ mitt navn er Karan Singh Sandhu. Jeg er 17 år gammel og har hatt IT 1 fra Augus
 Jeg liker IT 1 veldig godt og har derfor tnkt å ta IT 2 også. På denne siden kan du se noen av sidene jeg har lagd gjennom året.
       </p>
 
-<h1>HVA JEG HAR LÆRT</h1>
+<h1 class="hva_jeg_lært">HVA JEG HAR LÆRT</h1>
 
 <section class="det_jeg_har_lært">
 
@@ -152,8 +131,8 @@ Jeg liker IT 1 veldig godt og har derfor tnkt å ta IT 2 også. På denne siden 
 
 <section class="nettside">
   <a href="A Hoved Database/index.html">
-<h2>DATABASE KLESNETTSIDE</h2>
-<img src="A Hoved Database/bilder_klær_riktig/genser001a.jpg" alt="">
+<h2>DATABASE NETTSIDE</h2>
+<img src="A Hoved Database/bilder_klar_riktig/genser001a.jpg" alt="">
 </a>
 </section>
 
@@ -260,9 +239,9 @@ Jeg liker IT 1 veldig godt og har derfor tnkt å ta IT 2 også. På denne siden 
             </thead>
             <tbody>
               <tr>
-                <td><a href="http://www.facebook.com"><img src="A Hoved Database/bilder_klær_riktig/face.png" class="sosbilder"></a></td>
-                <td><a href="http://www.twitter.com"><img src="A Hoved Database/bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
-                <td><a href="http://www.instagram.com"><img src="A Hoved Database/bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                <td><a href="http://www.facebook.com"><img src="A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+                <td><a href="http://www.twitter.com"><img src="A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+                <td><a href="http://www.instagram.com"><img src="A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
               </tr>
             </tbody>
           </table>
