--- a/KaranSinMorsommeFerie/portefolje/A Hoved Database/bukser.html
+++ b/KaranSinMorsommeFerie/portefolje/A Hoved Database/bukser.html
@@ -54,8 +54,8 @@
 
       <!-- kode for  ønskeliste knappen er under her  -->
       <section class="lenke">
-        <a href="ønskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-        <a href="ønskeliste.html">ØNSKELISTE</a>
+        <a href="onskeliste.html"><img src="bilder_klar_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+        <a href="onskeliste.html">ØNSKELISTE</a>
       </section>
       <!-- kode for Handlekurv knappen er under her  -->
       <section class="lenke">
@@ -244,7 +244,7 @@
               <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="onskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td><a href="kundeservice.html">KONTAKT OSS</a></td>
