--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
     </section>
 
 
@@ -56,9 +56,9 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
-      <a href="ønskeliste.html">LISTE</a>
+      <a href="onskeliste.html">LISTE</a>
 
     </div>
 
@@ -222,7 +222,7 @@
 
           <div class="pris2"><mark class="nåpris2">9 999 kr </mark> <mark class="førpris2">19 999 </mark> <mark class="nåpris2">25%</mark> </div>
 
-          <button type="submit" class="handlekurv_knapp"><a href="ønskeliste.html"> Legg til i handlekurv</a></button>
+          <button type="submit" class="handlekurv_knapp"><a href="onskeliste.html"> Legg til i handlekurv</a></button>
         </form>
 
       </section>
@@ -373,7 +373,7 @@
                 <td><a href="logginn.html"> LOGG INN</a></td>
               </tr>
               <tr>
-                <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                <td><a href="onskeliste.html">ØNSKELISTE</a></td>
               </tr>
               <tr>
                 <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
