--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
@@ -56,9 +56,9 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
-      <a href="ønskeliste.html">LISTE</a>
+      <a href="onskeliste.html">LISTE</a>
 
     </div>
 
@@ -113,7 +113,7 @@
               <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="onskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
