--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_søk.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_søk.html
@@ -33,7 +33,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
     </section>
 
 
@@ -58,9 +58,9 @@
 
     <div class="lenke logginn">
 
-      <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
-      <a href="ønskeliste.html">LISTE</a>
+      <a href="onskeliste.html">LISTE</a>
 
     </div>
 
@@ -325,7 +325,7 @@
               <td><a href="logginn.html"> LOGG INN</a></td>
             </tr>
             <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              <td><a href="onskeliste.html">ØNSKELISTE</a></td>
             </tr>
             <tr>
               <td><a href="virker_ikke.html">KONTAKT OSS</a></td>
