--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/virker_ikke.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/virker_ikke.html
@@ -13,7 +13,7 @@
 
   <main>
     <section>
-      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
     </section>
 
     <a href="index.html">
