--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
@@ -45,7 +45,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="../A Hoved Database/bilder_klar_riktig/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -57,7 +57,7 @@
 
     <div class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
@@ -229,7 +229,7 @@
 
 
       <section class="søkemotorer">
-        <a href="trykk_søk.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="trykk_sok.html"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -536,9 +536,9 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
 
           </tbody>
