--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg2.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg2.html
@@ -44,7 +44,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="../A Hoved Database/bilder_klar_riktig/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -56,7 +56,7 @@
 
     <div class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
@@ -468,9 +468,9 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
               </tr>
 
             </tbody>
