--- a/KaranSinMorsommeFerie/portefolje/internett_historie/internett.html
+++ b/KaranSinMorsommeFerie/portefolje/internett_historie/internett.html
@@ -12,7 +12,8 @@
     <h1>Oppgaver Uke 42</h1>
   </header>
   <main>
-    <br>
+    <section class="oppgave">
+
     <p>
       <h1>OPPGAVER</h1>
 1.    <b>  Hva er internett, egentlig?</b> <br>
@@ -32,9 +33,9 @@ Hvordan glassfiber kan sende så mye informasjon over en så lang strekning.
 Internett har forandret livet vårt på utrolig mange forskjellige måter. Noen eksempler på dette er hvordan det hjelper oss med å kommunisere med andre mennesker  over lange strekninger og det hjelper oss med å ta opp ny informasjon.
 
   </p>
-</main>
-<main>
+</section>
 
+<section class="oppgave">
 
           <h1>Oppgaver, prøv selv, side 145 </h1>
 
@@ -54,8 +55,11 @@ Internett har forandret livet vårt på utrolig mange forskjellige måter. Noen 
               <li> De kan bruke sosiale medier til å promotere om sin egen kultur og for å forstå andres kultur som gjør at det blir bedre samhold mellom </li>
             </ol>
 
+          </section>
 
   </main>
+
+
 </body>
 
 </html>
