--- a/KaranSinMorsommeFerie/portefolje/nettsted nettsikkerhet/index.html
+++ b/KaranSinMorsommeFerie/portefolje/nettsted nettsikkerhet/index.html
@@ -33,16 +33,16 @@
       <b>
       <section id="bokser">
           <div id="rod">
-            <p>Nett-</p><p>svindel</p>
+            <p>Nett-svindel</p>
           </div>
           <div id="gul">
-            <p>Sikring</p><p>av</p><p>enheter</p>
+            <p>Sikring av enheter</p>
           </div>
           <div id="gronn">
-            <p>Råd</p><p>om</p><p>Sosiale medier</p>
+            <p>Råd om Sosiale medier</p>
           </div>
           <div id="bla">
-            <p>Personvern</p><p>på</p><p>internett</p>
+            <p>Personvern på internett</p>
           </div>
       </section>
       </b>
