--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Dame.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Dame.html
@@ -44,7 +44,7 @@
     <section class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="../A Hoved Database/bilder_klar_riktig/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -56,7 +56,7 @@
 
     <section class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
@@ -167,7 +167,7 @@
     </section>
     <section class="dame_reklame">
 
-      <a href="D_dame_klær.html"> <img src="bilder/dame modell.jpg" alt="bilde"> </a>
+      <a href="D_dame_klær.html"> <img src="bilder/dame_forside.jpg" alt="bilde" class="dame_bilde"> </a>
 
     </section>
 
@@ -369,9 +369,9 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
 
           </tbody>
