--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg1.html
@@ -44,7 +44,7 @@
     <div class="lenke logginn">
 
 
-      <a href="logginn.html"><img src="bilder/logg inn.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="logginn.html"><img src="../A Hoved Database/bilder_klar_riktig/logg inn.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
@@ -56,7 +56,7 @@
 
     <div class="lenke logginn">
 
-      <a href="onskeliste.html"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
+      <a href="onskeliste.html"><img src="../A Hoved Database/bilder_klar_riktig/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
 
       <a href="onskeliste.html">LISTE</a>
 
@@ -212,13 +212,6 @@
 
 
 
-          <div class="ønske_liste">
-
-            <a href="#"><img src="bilder/ønskeliste.png" alt="bilde" class="logginnbilde"> </a>
-            <br>
-            <a href="#" class="liste_tekst">LEGG TIL</a>
-
-          </div>
 
           <div class="pris2"><mark class="nåpris2">9 999 kr </mark> <mark class="førpris2">19 999 </mark> <mark class="nåpris2">25%</mark> </div>
 
@@ -479,9 +472,9 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-                <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+                <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
               </tr>
 
             </tbody>
