--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_Barne_klar.html
@@ -146,8 +146,8 @@
 
     <section class="sko_kjønn">
       <section class="Sko_herre">
-        <a href="H_herre_klær.html"><img src="bilder/herre klær.jpg" alt="bilde"> </a>
-        <a href="H_herre_klær.html">
+        <a href="H_herre_klar.html"><img src="bilder/herre klær.jpg" alt="bilde"> </a>
+        <a href="H_herre_klar.html">
           <p>Herre klær</p>
         </a>
       </section>
@@ -160,8 +160,8 @@
       </section>
 
       <section class="Sko_barn">
-        <a href="B_barne_klær.html"><img src="bilder/klær barn.jpg" class="barn_img" alt="bilde"> </a>
-        <a href="B_barne_klær.html" class="barn_img">
+        <a href="B_barne_klar.html"><img src="bilder/klær barn.jpg" class="barn_img" alt="bilde"> </a>
+        <a href="B_barne_klar.html" class="barn_img">
           <p>Barne klær</p>
         </a>
       </section>
@@ -457,7 +457,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -511,7 +511,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
