--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/H_herre_klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/H_herre_klar.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dame-KLÆR</title>
+  <title>HERRE-KLÆR</title>
 
   <link rel="stylesheet" href="main.css">
 </head>
@@ -77,7 +77,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -143,34 +143,36 @@
 
     </nav>
 
-
-
-
     <section class="sko_kjønn">
       <section class="Sko_herre">
-        <a href="H_herre_klær.html"><img src="bilder/herre klær.jpg" alt="bilde"> </a>
-        <a href="H_herre_klær.html">
+        <a href="H_herre_klar.html"><img src="bilder/herre klær.jpg" class="herre_img" alt="bilde"> </a>
+        <a href="H_herre_klar.html" class="herre_img">
           <p>Herre klær</p>
         </a>
       </section>
 
       <section class="Sko_dame">
-        <a href="D_dame_klær.html"><img src="bilder/model damer.jpg" class="dame_img" alt="bilde"> </a>
-        <a href="D_dame_klær.html" class="dame_img">
+        <a href="D_dame_klar.html"><img src="bilder/model damer.jpg" alt="bilde"> </a>
+        <a href="D_dame_klar.html">
           <p>Dame klær</p>
         </a>
       </section>
 
       <section class="Sko_barn">
-        <a href="B_barne_klær.html"><img src="bilder/klær barn.jpg" alt="bilde"> </a>
-        <a href="B_barne_klær.html">
+        <a href="B_barne_klar.html"><img src="bilder/klær barn.jpg" alt="bilde"> </a>
+        <a href="B_barne_klar.html">
           <p>Barne klær</p>
         </a>
       </section>
 
     </section>
 
-    <h1 class="h1_over">Dame klær</h1>
+
+
+
+
+
+    <h1 class="h1_over">Herre KLær</h1>
 
     <div class="valg_klær1">
 
@@ -227,7 +229,7 @@
 
 
       <section class="søkemotorer">
-        <a href="trykk_sok.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="trykk_sok.html#valg_klær1"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -332,103 +334,113 @@
 
 
       <section class="velge_klær">
-        <div class="bilde"><a href="dame_klesplagg.html"><img src="bilder/genser.jpg" alt="bilde"> </div></a>
-        <div class="Merke"><a href="dame_klesplagg.html">supreme</a></div>
-        <div class="navn"><a href="dame_klesplagg.html">GLACIER JAKKE</a>
-        </div>
-        <div class="pris"><a href="dame_klesplagg.html">2 995 kr</a></div>
-      </section>
-
-
-      <section class="velge_klær">
-        <div class="bilde"><a href="dame_klesplagg2.html"><img src="bilder/jakke.jpg" alt="bilde"></div></a>
-        <div class="Merke"><a href="dame_klesplagg2.html">COLUMBUS</a></div>
-        <div class="navn"><a href="dame_klesplagg2.html">HI TECH JAKKE</a>
-        </div>
-        <div class="pris"><a href="dame_klesplagg2.html">1 499 kr</a></div>
-      </section>
-
-
-      <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame11.jpg" alt="bilde"></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
+        <div class="bilde"><img src="bilder/skjorte7.jpg" alt="bilde"> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET
         </div>
         <div class="pris">2 995 kr</div>
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame2.jpg" alt="bilde"></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">strikkegenser
-        </div>
-        <div class="pris">22 499 kr</div>
+        <div class="bilde"><img src="bilder/skjorte8.jpg" alt="bilde"> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
       </section>
 
-      <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame10.jpg" alt="bilde"></div>
-        <div class="Merke">VERSACE </div>
-        <div class="navn"> dress jakke
-        </div>
-        <div class="pris"><mark class="nåpris">230 kr </mark> <mark class="førpris">9 999 </mark> <mark class="nåpris">10%</mark> </div>
-      </section>
+
+
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame9.jpg" alt="bilde"></div>
-        <div class="Merke">Napapirji </div>
-        <div class="navn">Utebukse
-        </div>
-        <div class="pris">59 889 kr</div>
-      </section>
-
-      <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame8.jpg" alt="bilde"></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
+        <div class="bilde"><img src="bilder/skjorte4.jpg" alt="bilde"> </div>
+        <div class="Merke">supreme</div>
+        <div class="navn">GLACIER JAKKE
         </div>
         <div class="pris">2 995 kr</div>
       </section>
 
-      <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame7.jpg" alt="bilde"></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">strikkegenser
-        </div>
-        <div class="pris">7 989 kr</div>
-      </section>
-
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame3.jpg" alt="bilde"></div>
-        <div class="Merke">VERSACE </div>
-        <div class="navn"> dress jakke
-        </div>
-        <div class="pris">1 995 kr</div>
+        <div class="bilde"><img src="bilder/skjorte3.jpg" alt="bilde"></div>
+        <div class="Merke">COLUMBUS</div>
+        <div class="navn">HI TECH JAKKE</div>
+        <div class="pris">1 499 kr</div>
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame1.jpg" alt="bilde"></div>
-        <div class="Merke">Napapirji </div>
-        <div class="navn">Utebukse
+        <div class="bilde"> <a href="herre_klesplagg1.html"><img src="bilder/prosen.jpg" class="bilde_modell" alt="bilde"></div></a>
+        <div class="Merke"><a href="herre_klesplagg1.html">Polo Ralph Lauren </a></div>
+        <div class="navn"><a href="herre_klesplagg1.html">BEAR - Strikkegenser</a>
         </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">95%</mark> </div>
+        <div class="pris"><a href="herre_klesplagg1.html"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </a></div>
+      </section>
+
+
+
+      <section class="velge_klær">
+        <div class="bilde"><img src="bilder/skjorte5.jpg" alt="bilde"> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
       </section>
 
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame6.jpg" alt="bilde"></div>
-        <div class="Merke">Napapirji </div>
-        <div class="navn">Utebukse
-        </div>
-        <div class="pris">59 889 kr</div>
+        <div class="bilde"><a href="herre_klesplagg2.html"><img src="bilder/jakke_menn.jpg" alt="bilde"> </div></a>
+        <div class="Merke"> <a href="herre_klesplagg2.html">Supreme</a></div>
+        <div class="navn"><a href="herre_klesplagg2.html">GLACIER JAKKE</a></div>
+        <div class="pris"><a href="herre_klesplagg2.html">2 995 kr</a></div>
       </section>
 
+
+
       <section class="velge_klær">
-        <div class="bilde"><img src="bilder/dame5.jpg" alt="bilde"></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
-        </div>
+        <div class="bilde"><img src="bilder/it dress.jpg" alt="bilde"> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
+      </section>
+
+
+
+
+
+      <section class="velge_klær">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt="bilde"> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET</div>
         <div class="pris">2 995 kr</div>
       </section>
+
+
+      <section class="velge_klær">
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt="bilde"></div>
+        <div class="Merke">Polo Ralph Lauren</div>
+        <div class="navn">HI TECH Fleecejakke</div>
+        <div class="pris">1 499 kr</div>
+      </section>
+
+
+
+
+      <section class="velge_klær">
+        <div class="bilde"><img src="bilder/skjorte5.jpg" alt="bilde"></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser</div>
+        <div class="pris">2 995 kr</div>
+      </section>
+
+
+
+      <section class="velge_klær">
+        <div class="bilde"><img src="bilder/skjorte6.jpg" alt="bilde"> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET</div>
+        <div class="pris">2 995 kr</div>
+      </section>
+
+
+
+
 
 
 
@@ -437,13 +449,11 @@
   </main>
 
 
+  <section class="reklame2">
+    <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt="bilde"></a>
+  </section>
 
   <footer>
-
-
-    <section class="reklame2">
-      <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt="bilde"></a>
-    </section>
 
     <section class="hele_footer">
 
@@ -486,7 +496,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -513,7 +523,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -540,7 +550,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -566,9 +576,9 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
-              <td><a href="http://www.singhsandhu.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
+              <td><a href="http://www.facebook.com"><img src="../A Hoved Database/bilder_klar_riktig/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.twitter.com"><img src="../A Hoved Database/bilder_klar_riktig/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.instagram.com"><img src="../A Hoved Database/bilder_klar_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
 
           </tbody>
@@ -580,6 +590,7 @@
 
     </section>
   </footer>
+
 
 </body>
 
