--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/dame_klesplagg.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/dame_klesplagg.html
@@ -146,7 +146,7 @@
         <a href="D_dame_klær.html"> Women: get up to 60% off dresses!!</a>
       </section>
       <section class="Men_get">
-        <a href="H_herre_klær.html">Men: Get up to 60% off sweaters!!</a>
+        <a href="H_herre_klar.html">Men: Get up to 60% off sweaters!!</a>
       </section>
 
     </section>
@@ -386,7 +386,7 @@
                 </td>
               </tr>
               <tr>
-                <td><a href="H_herre_klær.html">Klær</a>
+                <td><a href="H_herre_klar.html">Klær</a>
                 </td>
               </tr>
               <tr>
@@ -440,7 +440,7 @@
                 <td><a href="Barn.html">Barn</a></td>
               </tr>
               <tr>
-                <td><a href="B_barne_klær.html">Klær</a>
+                <td><a href="B_barne_klar.html">Klær</a>
                 </td>
               </tr>
               <tr>
