--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg2.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre_klesplagg2.html
@@ -74,7 +74,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -143,10 +143,10 @@
 
     <section class="under_nav">
       <section class="women_get">
-        <a href="D_dame_klær.html"> Women: get up to 60% off dresses!!</a>
+        <a href="D_dame_klar.html"> Women: get up to 60% off dresses!!</a>
       </section>
       <section class="Men_get">
-        <a href="H_herre_klær.html">Men: Get up to 60% off sweaters!!</a>
+        <a href="H_herre_klar.html">Men: Get up to 60% off sweaters!!</a>
       </section>
 
     </section>
@@ -388,7 +388,7 @@
                 </td>
               </tr>
               <tr>
-                <td><a href="H_herre_klær.html">Klær</a>
+                <td><a href="H_herre_klar.html">Klær</a>
                 </td>
               </tr>
               <tr>
@@ -415,7 +415,7 @@
                 <td><a href="Dame.html">Damer</a></td>
               </tr>
               <tr>
-                <td><a href="D_dame_klær.html">Klær</a>
+                <td><a href="D_dame_klar.html">Klær</a>
                 </td>
               </tr>
               <tr>
@@ -442,7 +442,7 @@
                 <td><a href="Barn.html">Barn</a></td>
               </tr>
               <tr>
-                <td><a href="B_barne_klær.html">Klær</a>
+                <td><a href="B_barne_klar.html">Klær</a>
                 </td>
               </tr>
               <tr>
