--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
@@ -465,7 +465,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
