--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/klar.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/klar.html
@@ -77,7 +77,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -145,22 +145,22 @@
 
     <section class="sko_kjønn">
       <section class="Sko_herre">
-        <a href="H_herre_klær.html"><img src="bilder/herre klær.jpg" alt=""> </a>
-        <a href="H_herre_klær.html">
+        <a href="H_herre_klar.html"><img src="bilder/herre klær.jpg" alt=""> </a>
+        <a href="H_herre_klar.html">
           <p>Herre klær</p>
         </a>
       </section>
 
       <section class="Sko_dame">
-        <a href="D_dame_klær.html"><img src="bilder/model damer.jpg" alt=""> </a>
-        <a href="D_dame_klær.html">
+        <a href="D_dame_klar.html"><img src="bilder/model damer.jpg" alt=""> </a>
+        <a href="D_dame_klar.html">
           <p>Dame klær</p>
         </a>
       </section>
 
       <section class="Sko_barn">
-        <a href="B_barne_klær.html"><img src="bilder/klær barn.jpg" alt=""> </a>
-        <a href="B_barne_klær.html">
+        <a href="B_barne_klar.html"><img src="bilder/klær barn.jpg" alt=""> </a>
+        <a href="B_barne_klar.html">
           <p>Barne klær</p>
         </a>
       </section>
@@ -495,7 +495,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -522,7 +522,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -549,7 +549,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
