--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/onskeliste.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../A Hoved Database/bilder_klar_riktig/ny_logo.png" alt="logo" class="logo"></a>
     </section>
 
 
@@ -139,7 +139,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -166,7 +166,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -193,7 +193,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
