--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/B_barn_sko.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+B_barne_klar.html<!DOCTYPE html>
 <html lang="nb" dir="ltr">
 
 <head>
@@ -77,7 +77,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -456,7 +456,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -483,7 +483,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -510,7 +510,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
