--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre.html
@@ -72,7 +72,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -151,7 +151,7 @@
 
 
       <section class="velge_ting">
-        <a href="H_herre_klær.html" class="velge_ord">klær</a>
+        <a href="H_herre_klar.html" class="velge_ord">klær</a>
         |
         <a href="H_herre_sko.html" class="velge_ord">Sko</a>
         |
@@ -197,7 +197,7 @@
     <section class="velge_herre_klær">
 
       <section class="klæ_herre alle_4">
-        <a href="H_herre_klær.html"><img src="bilder/klesplagg_it.jpg" alt="bilde"> </a>
+        <a href="H_herre_klar.html"><img src="bilder/klesplagg_it.jpg" alt="bilde"> </a>
       </section>
 
 
@@ -223,38 +223,38 @@
 
       <section class="Louis">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/Louis.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/Louis.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="versace">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/versace.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/versace.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Gucci">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/Gucci.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/Gucci.jpg" alt="bilde"> </a>
         </section>
 
       </section>
 
       <section class="off_white">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/off_white.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/off_white.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Supreme">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Balenciaga">
         <section class="brand_enogalle">
-          <a href=H_herre_klær.html><img src="bilder/Balenciaga.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/Balenciaga.jpg" alt="bilde"> </a>
         </section>
       </section>
 
@@ -316,7 +316,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -343,7 +343,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -370,7 +370,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
