--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_sok.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/trykk_sok.html
@@ -77,7 +77,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html'">Gensere</a>
@@ -206,7 +206,7 @@
 
 
       <section class="søkemotorer">
-        <a href="klær.html"><button type="submit" class="knapp2">søk</button></a>
+        <a href="klar.html"><button type="submit" class="knapp2">søk</button></a>
       </section>
 
 
@@ -351,7 +351,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -378,7 +378,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -405,7 +405,7 @@
               <td><a href="Barn.html">Barn</a></td>
             </tr>
             <tr>
-              <td><a href="B_barne_klær.html">Klær</a>
+              <td><a href="B_barne_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
