--- a/KaranSinMorsommeFerie/portefolje/nettsted nettsikkerhet/personvern_pa_internett.html
+++ b/KaranSinMorsommeFerie/portefolje/nettsted nettsikkerhet/personvern_pa_internett.html
@@ -20,7 +20,7 @@
           <a href="sikring_av_enheter.html">Sikring av enheter</a>
         </div>
         <div>
-          <a href="råd_om_SoMe.html">Råd om SoMe</a>
+          <a href="rod_om_SoMe.html">Råd om SoMe</a>
         </div>
         <div>
           <a href="personvern_pa_internett.html">Personvern på internett</a>
