--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
@@ -74,7 +74,7 @@
 
 
         <section class="dropned">
-          <button class="dropknapp"><a href="klær.html">Klær</a>
+          <button class="dropknapp"><a href="klar.html">Klær</a>
           </button>
           <section class="dropned-content">
             <a href="virker_ikke.html">Gensere</a>
@@ -311,37 +311,37 @@
 
       <section class="Louis">
         <section class="brand_enogalle">
-          <a href=klær.html><img src="bilder/Louis.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/Louis.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="versace">
         <section class="brand_enogalle">
-          <a href="klær.html"><img src="bilder/versace.jpg" alt="bilde"> </a>
+          <a href="klar.html"><img src="bilder/versace.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Gucci">
         <section class="brand_enogalle">
-          <a href=klær.html><img src="bilder/Gucci.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/Gucci.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="off_white">
         <section class="brand_enogalle">
-          <a href=klær.html><img src="bilder/off_white.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/off_white.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Supreme">
         <section class="brand_enogalle">
-          <a href=klær.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
         </section>
       </section>
 
       <section class="Balenciaga">
         <section class="brand_enogalle">
-          <a href=klær.html><img src="bilder/Balenciaga.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/Balenciaga.jpg" alt="bilde"> </a>
         </section>
       </section>
 
@@ -411,7 +411,7 @@
               </td>
             </tr>
             <tr>
-              <td><a href="H_herre_klær.html">Klær</a>
+              <td><a href="H_herre_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
@@ -438,7 +438,7 @@
               <td><a href="Dame.html">Damer</a></td>
             </tr>
             <tr>
-              <td><a href="D_dame_klær.html">Klær</a>
+              <td><a href="D_dame_klar.html">Klær</a>
               </td>
             </tr>
             <tr>
