--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Barn.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/Barn.html
@@ -244,7 +244,7 @@
 
       <section class="Supreme">
         <section class="brand_enogalle">
-          <a href=D_dame_klar.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
+          <a href=D_dame_klar.html><img src="bilder/supreme.jpg" alt="bilde"> </a>
         </section>
       </section>
 
