--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/herre.html
@@ -248,7 +248,7 @@
 
       <section class="Supreme">
         <section class="brand_enogalle">
-          <a href=H_herre_klar.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
+          <a href=H_herre_klar.html><img src="bilder/supreme.jpg" alt="bilde"> </a>
         </section>
       </section>
 
