--- a/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/portefolje/Klesnettside prosjekt/index.html
@@ -335,7 +335,7 @@
 
       <section class="Supreme">
         <section class="brand_enogalle">
-          <a href=klar.html><img src="bilder/Supreme.jpg" alt="bilde"> </a>
+          <a href=klar.html><img src="bilder/supreme.jpg" alt="bilde"> </a>
         </section>
       </section>
 
